# stingray

./: .gitignore  .travis.yml  Dockerfile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  benchmark.old  config.h.in  configure  configure.ac
.github/workflows/: build.yml
data/: Makefile.am  Makefile.in  com.stingray.Process.desktop.in  com.stingray.Process.service.in  com.stingray.service.in
debian/: changelog  control  copyright  stingray.install  stingray.postinst
debian/source/: options
doc/: Makefile.am  Makefile.in  stingray.1  vswitch.1
src/: Makefile.am  Makefile.in  constants.h  dbuffer.hpp  debuffer.hpp  debug.h  decoder_context.cpp  decoder_context.hpp  decoder_context_gst.cpp  decoder_context_gst.hpp  display.cpp  display.hpp  frametimer.cpp  frametimer.hpp  launcher.cpp  video.cpp  video.hpp  video_buffer.cpp  video_buffer.hpp  video_decoder.cpp  video_decoder.hpp  video_decoder_gst.cpp  video_decoder_gst.hpp  video_frame.cpp  video_frame.hpp  video_frame_gst.hpp  window.cpp  window.hpp
src/dbus/: dbus.cpp  dbus.hpp  vtable.hpp
src/events/: API.md  Makefile.am  SDLEvents.cpp  SDLEvents.hpp  eventListener.hpp  event_manager.cpp  event_manager.hpp  stubController.cpp
src/exceptions/: av_exception.hpp  global_exception.hpp  sdl_exception.hpp
src/modules/: libstingraysocket.cpp
test/: Makefile.am  Makefile.in  benchmark_decodeSpeed.cpp  test_dbuffer.cpp  test_dbuffer.hpp  test_debuffer.cpp  test_debuffer.hpp  test_frametimer.cpp  test_frametimer.hpp  test_main.cpp  test_video.cpp  test_video.hpp  test_video_decoder.cpp  test_video_decoder.hpp
test/fixtures/: goutput.mov  makefix.sh
test/test_helpers/: frames_compare.hpp
